2022-03-21  Karl Berry  <karl@tug.org>

	* TL'22 release.

2022-03-10  Karl Berry  <karl@freefriends.org>

	* tfmload.c (tfmopen): include area when searching, as with pkopen.
	Report from Igor Liferenko, 9 Mar 2022 13:43:48.
	
	* loadfont.c (pkopen): "PK font" in error message when not found.

2022-02-27  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* tfmload.c:
	Interpret FONTDIR RT in OFM as pTeX vertical writing.
	https://github.com/texjporg/tex-jp-build/issues/135
	* Makefile.{am,in}, uptex-vf.test,
	testdata/Makefile_upjf, testdata/upjf-g00.{opl,ofm},
	testdata/upjf-g00.{opl,ofm}:
	Add a new test for pTeX & OFM FONTDIR.

2022-02-24  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* Makefile.{am,in}, uptex-vf.test,
	testdata/Makefile_upjf, testdata/upjv{,-r,-g}.tfm,
	testdata/upjf.{tex,dvi,map}, testdata/upjv_{full,omit}.vf:
	Add a new test for upTeX vertical writing.

2022-01-22  Tomas Rokicki  <rokicki@gmail.com>
	
	* dvips.c (landscaperotate): define new global for new option.
	(helparr): mention it in help message.
	(main): recognize -landscaperotate command-line option.
	* protos.h (landscaperotate): declare it.
	* dvips.texi (Option details, Configuration file commands,
	Config file paper sizes): document it.
	* output.c (findpapersize): only do the rotation auto-matching
	if option is set.
	* resident.c (getdefaults): recognize "landscaperotate" in config file.
	* NEWS: mention it.
	Report from Ulrike Fischer, 26 Jul 2021 09:11:29 ff.

2022-01-18  Karl Berry  <karl@freefriends.org>

	* NEWS,
	* afm2tfm.c,
	* dvips.c,
	* dvips.h,
	* dvips.texi,
	* configure.ac: version 2022.1 and copyright 2022.

2021-11-03  Karl Berry  <karl@freefriends.org>

	* dvips.texi: PostScript not Postscript; remove broken urls;
	a couple other typos.

2021-10-24  Karl Berry  <karl@freefriends.org>

	* dvips.texi (Option details) <-l>: describe [.PAGESEQ] subvalue.
	<-p>: Just refer to -l instead of duplicating.
	* dvips.1: likewise.
	Report from Igor Liferenko, 20 Aug 2021 10:13:32.
